tests/invalidTest/other/repeated_name_int_int.q
# EXPECT repeated variable name
def sint64 errorTest(){
    sint64 i
    uint32 i
}